# docs/swagger.yaml
@@ -44,6 +44,10 @@ definitions:
         type: number
       is_booked:
         type: boolean
+      latitude:
+        type: number
+      longitude:
+        type: number
       lowest_level:
         type: number
       match_type:
@@ -53,6 +57,9 @@ definitions:
       start_time:
         type: integer
       start_time_str:
+        type: string
+      status:
+        description: event状态：created;full;finished
         type: string
       weekday:
         type: string
@@ -114,6 +121,22 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/handler.GetEventListData'
+      err_no:
+        type: integer
+      err_tips:
+        type: string
+    type: object
+  handler.GetFieldsListRes:
+    properties:
+      fields_list:
+        items:
+          $ref: '#/definitions/handler.Organization'
+        type: array
+    type: object
+  handler.GetFieldsListResp:
+    properties:
+      data:
+        $ref: '#/definitions/handler.GetFieldsListRes'
       err_no:
         type: integer
       err_tips:
@@ -217,8 +240,18 @@ definitions:
     type: object
   handler.Organization:
     properties:
+      address:
+        type: string
       event_num:
         type: integer
+      id:
+        type: integer
+      latitude:
+        type: number
+      logo:
+        type: string
+      longitude:
+        type: number
       name:
         type: string
       status:
@@ -457,6 +490,10 @@ definitions:
       is_public:
         description: 是否是公开比赛
         type: boolean
+      latitude:
+        type: string
+      longitude:
+        type: string
       lowest_level:
         description: 适合的最低级别
         type: number
@@ -698,6 +735,34 @@ paths:
           schema:
             $ref: '#/definitions/handler.CreateEventResp'
       summary: 创建活动
+      tags:
+      - /team_up/event
+  /team_up/event/fields_list:
+    post:
+      consumes:
+      - application/json
+      description: 根据运动类型和城市获取场地列表
+      parameters:
+      - description: 城市
+        in: body
+        name: city
+        required: true
+        schema:
+          type: string
+      - description: 运动类型
+        in: body
+        name: sport_type
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.GetFieldsListResp'
+      summary: 获取场地列表
       tags:
       - /team_up/event
   /team_up/event/list:
